--- a/site/notebooks/EXECUTED/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/3-developing_challenger_model.ipynb
@@ -36,7 +36,7 @@
     "- [Running model evaluation tests](#toc6_)    \n",
     "  - [Run model performance tests](#toc6_1_)    \n",
     "    - [Evaluate performance of the champion model](#toc6_1_1_)    \n",
-    "    - [Log a model finding](#toc6_1_2_)    \n",
+    "    - [Log an artifact](#toc6_1_2_)    \n",
     "    - [Evaluate performance of challenger model](#toc6_1_3_)    \n",
     "  - [Run diagnostic tests](#toc6_2_)    \n",
     "  - [Run feature importance tests](#toc6_3_)    \n",
@@ -620,9 +620,9 @@
    "source": [
     "<a id='toc6_1_2_'></a>\n",
     "\n",
-    "#### Log a model finding\n",
+    "#### Log an artifact\n",
     "\n",
-    "As we can observe from the output above, our champion model doesn't pass the `MinimumAccuracy` based on the default thresholds of the out-of-the-box test, so let's log a model finding in the ValidMind Platform  ([Need more help?](https://docs.validmind.ai/guide/model-validation/add-manage-model-findings.html)):\n",
+    "As we can observe from the output above, our champion model doesn't pass the `MinimumAccuracy` based on the default thresholds of the out-of-the-box test, so let's log an artifact (finding) in the ValidMind Platform  ([Need more help?](https://docs.validmind.ai/guide/model-validation/add-manage-artifacts.html)):\n",
     "\n",
     "1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.\n",
     "\n",
@@ -630,16 +630,16 @@
     "\n",
     "3. Locate the Data Preparation section and click on **2.2.2. Model Performance** to expand that section.\n",
     "\n",
-    "4. Under the Model Performance Metrics section, locate Findings then click **Link Finding to Report**:\n",
+    "4. Under the Model Performance Metrics section, locate Artifacts then click **Link Artifact to Report**:\n",
     "\n",
-    "    <img src= \"link-finding.png\" alt=\"Screenshot showing the validation report with the link finding option highlighted\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
+    "    <img src=\"link-artifact.png\" alt=\"Screenshot showing the validation report with the link artifact option highlighted\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
     "    <br><br>\n",
     "\n",
-    "5. Select **Validation Issue** as the type of finding.\n",
+    "5. Select **Validation Issue** as the type of artifact.\n",
     "\n",
-    "6. Click **+ Add Validation Issue Finding** to add a finding.\n",
+    "6. Click **+ Add Validation Issue** to add a validation issue type artifact.\n",
     "\n",
-    "76. Enter in the details for your finding, for example:\n",
+    "76. Enter in the details for your validation issue, for example:\n",
     "\n",
     "    - **TITLE** — Champion Logistic Regression Model Fails Minimum Accuracy Threshold\n",
     "    - **RISK AREA** — Model Performance\n",
@@ -648,9 +648,9 @@
     "\n",
     "8. Click **Save**.\n",
     "\n",
-    "9. Select the finding you just added to link to your validation report and click **Update Linked Findings** to insert your finding.\n",
+    "9. Select the validation issue you just added to link to your validation report and click **Update Linked Artifacts** to insert your validation issue.\n",
     "\n",
-    "10. Click on the finding to expand the finding, where you can adjust details such as severity, owner, due date, status, etc. as well as include proposed remediation plans or supporting documentation as attachments."
+    "10. Click on the validation issue to expand the issue, where you can adjust details such as severity, owner, due date, status, etc. as well as include proposed remediation plans or supporting documentation as attachments."
    ]
   },
   {
@@ -709,7 +709,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Based on the performance metrics, our challenger random forest classification model passes the <code>MinimumAccuracy</code> where our champion did not.</b></span>\n",
     "<br></br>\n",
-    "In your validation report, support your recommendation in your finding's <b>Proposed Remediation Plan</b> to investigate the usage of our challenger model by inserting the performance tests we logged with this notebook into the appropriate section.</div>"
+    "In your validation report, support your recommendation in your validation issue's <b>Proposed Remediation Plan</b> to investigate the usage of our challenger model by inserting the performance tests we logged with this notebook into the appropriate section.</div>"
    ]
   },
   {
@@ -845,7 +845,7 @@
     "- [x] Initialize ValidMind model objects\n",
     "- [x] Assign predictions and probabilities to your ValidMind model objects\n",
     "- [x] Use tests from ValidMind to evaluate the potential of models, including comparative tests between champion and challenger models\n",
-    "- [x] Log a model finding in the ValidMind Platform"
+    "- [x] Log an artifact in the ValidMind Platform"
    ]
   },
   {
