--- a/site/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.ipynb
@@ -78,7 +78,7 @@
     "- [x] Understood the basics of how to identify and run validation tests\n",
     "- [x] Run validation tests for your champion and challenger models, and logged the results of those tests to the ValidMind Platform\n",
     "- [x] Inserted your logged test results into your validation report\n",
-    "- [x] Added some preliminary findings to your validation report\n",
+    "- [x] Added some preliminary artifacts (findings) to your validation report\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Need help with the above steps?</b></span>\n",
     "<br></br>\n",
@@ -1120,7 +1120,7 @@
     "- Verifying the data quality steps performed by the model development team\n",
     "- Independently replicating the champion model's results and conducting additional tests to assess performance, stability, and robustness\n",
     "- Setting up test inputs and a challenger model for comparative analysis\n",
-    "- Running validation tests, analyzing results, and logging findings to ValidMind"
+    "- Running validation tests, analyzing results, and logging artifacts to ValidMind"
    ]
   },
   {
