--- a/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
@@ -18,7 +18,7 @@
     "- Verifying the data quality steps performed by the model development team\n",
     "- Independently replicating the champion model's results and conducting additional tests to assess performance, stability, and robustness\n",
     "- Setting up test inputs and challenger models for comparative analysis\n",
-    "- Running validation tests, analyzing results, and logging findings to ValidMind"
+    "- Running validation tests, analyzing results, and logging artifacts (findings) to ValidMind"
    ]
   },
   {
@@ -1776,7 +1776,7 @@
     "\n",
     "2. In the left sidebar that appears for your model, click **Validation Report** under Documents.\n",
     "\n",
-    "Include your logged test results as evidence, create risk assessment notes, add findings, and assess compliance, then submit your report for review when it's ready. **Learn more:** [Preparing validation reports](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html)"
+    "Include your logged test results as evidence, create risk assessment notes, add artifacts, and assess compliance, then submit your report for review when it's ready. **Learn more:** [Preparing validation reports](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html)"
    ]
   },
   {
