Edit: Manage artifact types

--- a/site/guide/model-validation/manage-artifact-types.qmd
+++ b/site/guide/model-validation/manage-artifact-types.qmd
@@ -47,7 +47,9 @@ Model Limitation
     - **[name]{.smallcaps}**
     - **[description]{.smallcaps}**
     - **[fields]{.smallcaps}** — Select the default artifact fields that should appear on this type of artifact.[^3]
-    - **[artifact statuses]{.smallcaps}** — Configure the statuses available to this artifact type.[^4]
+    - **[create permissions]{.smallcaps}** — Model stakeholder types or user roles[^4] that can create this type of artifact.
+    - **[update permissions]{.smallcaps}** — Model stakeholder types or user roles that can update existing artifacts of this type.
+    - **[artifact statuses]{.smallcaps}** — Configure the statuses available to this artifact type.[^5]
 
 ### Manage artifact type statuses
 
@@ -96,4 +98,10 @@ Artifact statuses cannot be deleted if in use on an artifact. Ensure that the st
 
     :::
 
-[^4]: [Manage artifact type statuses](#manage-artifact-type-statuses)
+[^4]:
+
+    - [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+    - [Manage roles](/guide/configuration/manage-roles.qmd)
+
+
+[^5]: [Manage artifact type statuses](#manage-artifact-type-statuses)
