Docs - Customize document templates: Edit template outlines

--- a/site/guide/templates/_customize-document-templates.qmd
+++ b/site/guide/templates/_customize-document-templates.qmd
@@ -14,33 +14,46 @@
 
 1. In outline editing mode, you can: 
 
-   a. **Expand sections:**
-      - Expand the menu for any sections with subsections by clicking **{{< fa chevron-down >}}**.
+   ::: {.panel-tabset}
 
-   a. **Add content to sections:** [validation reports only]{.smallercaps .pink}
-      - Click **{{< fa plus >}}** to add content to that section of the template, such as a **Summary Block** or a **Guideline Block**.^[[Add guidelines to templates](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates)]
+   ### Work with existing sections
 
-   a. **Rename sections:** 
-      - Hover over a section until the **{{< fa pencil >}}** appears, then click on it to change the name. 
-      - Save by clicking **{{< fa check >}}**, and discard changes by clicking **{{< fa xmark >}}**.
+   Expand sections
+   : Expand the menu for any sections with subsections by clicking **{{< fa chevron-down >}}**.
 
-   a. **Insert new sections:** 
-      - Click **{{< fa plus >}}** to add a new section or subsection to the template.
-      - To add a section above the current section, select **{{< fa arrow-up >}} Section Before**.
-      - To add a section below the current section, select **{{< fa arrow-down >}} Section After**.
-      - To add a subsection within the current section, select **{{< fa arrow-right >}} Subsection**.
+   Rename sections
+   : 1. Hover over a section until the **{{< fa pencil >}}** appears, then click on it to change the name. 
+   1. Save by clicking **{{< fa check >}}**, and discard changes by clicking **{{< fa xmark >}}**.
 
-   a. **Remove sections:**
-      - Hover over the section you want to delete. 
-      - When the **{{< fa trash-can >}}** appears, click on it. 
-      - After you confirm, that section will be removed. 
+   Remove sections
+   : 1. Hover over the section you want to delete. 
+   1. When the **{{< fa trash-can >}}** appears, click on it. 
+   1. After you confirm, that section will be removed. 
 
-   a. **Reorder sections:** 
-      - Click **{{< fa ellipsis-vertical >}}{{< fa ellipsis-vertical >}}** and hold firmly to drag to reorder sections.
+   Reorder sections
+   : Click **{{< fa ellipsis-vertical >}}{{< fa ellipsis-vertical >}}** and hold firmly to drag to reorder sections.
+
+   ### Add new sections and content
+
+   Insert new sections
+   : Click **{{< fa plus >}}** to add a new section or subsection to the template:
+   - To add a section above the current section, select **{{< fa arrow-up >}} Section Before**.
+   - To add a section below the current section, select **{{< fa arrow-down >}} Section After**.
+   - To add a subsection within the current section, select **{{< fa arrow-right >}} Subsection**.
+
+   Add content to sections
+   : In any section of a template that does not have child sections, click **{{< fa plus >}}** to add additional [content]{.smallcaps}:
+      - **{{< fa align-justify >}} Summary Block** [validation reports only]{.smallercaps .pink} 
+      - **{{< fa circle-check >}} Guideline Block**^[[Add guidelines to templates](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates)] [validation reports only]{.smallercaps .pink} 
+      - **{{< fa align-left >}} Text Block**^[[Add text blocks via template outlines](/guide/templates/customize-document-templates.qmd#add-text-blocks-via-template-outlines)]
+
+   :::
 
 1. When you're done, click **Create New Version** to view a side-by-side comparison of your changes with the previous version:
    - Add a description in **[version notes]{.smallcaps}** to track your changes.
    - Click **Save** to save the new version.
+
+   Once saved, your new template version becomes available for use.
 
 ::::
 
@@ -85,6 +98,7 @@ Customize {{< var vm.product >}}'s templates for model documents to fit your spe
    - Add a description in **[version notes]{.smallcaps}** to track your changes.
    - Click **Save** to save the new version.
 
+   Once saved, your new template version becomes available for use.
+
 ::::
 
-Once saved, your new template version becomes available for use.
