--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -31,12 +31,6 @@ Check the [document template]{.smallcaps} section[^3] in the right sidebar.
 
 {{< include _customize-document-templates.qmd >}}
 
-![Editing a template outline](edit-template-outline.gif){fig-alt="A gif demonstrating editing a template outline" .screenshot width=90%}
-
-::: {.callout}
-To add guidelines to your template, edit the YAML template directly.
-:::
-
 ## Edit YAML templates
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
@@ -165,9 +159,17 @@ a:hover {
 
 :::
 
-### Add text blocks to templates
+## Add text blocks to templates
 
-To add shared text blocks[^7] to your templates via the YAML editor:
+Add shared text blocks from your library[^7] to your templates through both the template outline or the YAML editor.
+
+### Add text blocks via template outlines
+
+
+
+### Add text blocks via the YAML editor
+
+To add shared text blocks to your templates: via the YAML editor:
 
 ::: {.panel-tabset}
 
