Training: Customizing your model inventory > Customize document templates

--- a/site/guide/templates/_customize-document-templates.qmd
+++ b/site/guide/templates/_customize-document-templates.qmd
@@ -16,14 +16,14 @@
 
    ::: {.panel-tabset}
 
-   ### Work with existing sections
+   #### Work with existing sections
 
    Expand sections
    : Expand the menu for any sections with subsections by clicking **{{< fa chevron-down >}}**.
 
    Rename sections
    : 1. Hover over a section until the **{{< fa pencil >}}** appears, then click on it to change the name. 
-   1. Save by clicking **{{< fa check >}}**, and discard changes by clicking **{{< fa xmark >}}**.
+   1. Save by clicking **{{< fa check >}}**.
 
    Remove sections
    : 1. Hover over the section you want to delete. 
@@ -33,7 +33,7 @@
    Reorder sections
    : Click **{{< fa ellipsis-vertical >}}{{< fa ellipsis-vertical >}}** and hold firmly to drag to reorder sections.
 
-   ### Add new sections and content
+   #### Add new sections and content
 
    Insert new sections
    : Click **{{< fa plus >}}** to add a new section or subsection to the template:
@@ -64,35 +64,33 @@ Customize {{< var vm.product >}}'s templates for model documents to fit your spe
 
 1. Under Documents, select **Templates**.
 
-1. Select one of the tabs for the [type of template you want to edit](/guide/templates/working-with-model-documents.qmd){target="blank"}.
+1. Select one of the tabs for the [type of template you want to edit](/guide/templates/manage-document-types.qmd){target="blank"}.
 
 1. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Outline**. 
 
 1. In outline editing mode, you can: 
 
-   a. **Expand sections:**
-      - Expand the menu for any sections with subsections by clicking **{{< fa chevron-down >}}**.
+   ::: {.panel-tabset}
 
-   a. **Add content to sections:** [validation reports only]{.smallercaps}
-      - Click **{{< fa plus >}}** to add content to that section of the template, such as a **Summary Block** or a [**Guideline Block**](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates){target="_blank"}.
+   #### Work with existing sections
 
-   a. **Rename sections:** 
-      - Hover over a section until the **{{< fa pencil >}}** appears, then click on it to change the name. 
-      - Save by clicking **{{< fa check >}}**, and discard changes by clicking **{{< fa xmark >}}**.
+   a. **Expand sections** — Expand the menu for any sections with subsections by clicking **{{< fa chevron-down >}}**.
+   a. **Rename sections** — Hover over a section until the **{{< fa pencil >}}** appears, then click on it to change the name. Save by clicking **{{< fa check >}}**.
+   a. **Remove sections** — Hover over the section you want to delete. When the **{{< fa trash-can >}}** appears, click on it. After you confirm, that section will be removed.
+   a. **Reorder sections** — Click **{{< fa ellipsis-vertical >}}{{< fa ellipsis-vertical >}}** and hold firmly to drag to reorder sections.
 
-   a. **Insert new sections:** 
-      - Click **{{< fa plus >}}** to add a new section or subsection to the template.
+   #### Add new sections and content
+
+   a. **Insert new sections** — Click **{{< fa plus >}}** to add a new section or subsection to the template:
       - To add a section above the current section, select **{{< fa arrow-up >}} Section Before**.
       - To add a section below the current section, select **{{< fa arrow-down >}} Section After**.
       - To add a subsection within the current section, select **{{< fa arrow-right >}} Subsection**.
+   a. **Add content to sections** — In any section of a template that does not have child sections, click **{{< fa plus >}}** to add additional [content]{.smallcaps}:
+      - **{{< fa align-justify >}} Summary Block** [validation reports only]{.smallercaps .pink} 
+      - [**{{< fa circle-check >}} Guideline Block**](/guide/model-validation/manage-validation-guidelines.qmd#add-guidelines-to-templates){target="_blank"} [validation reports only]{.smallercaps .pink} 
+      - [**{{< fa align-left >}} Text Block**](/guide/templates/customize-document-templates.qmd#add-text-blocks-via-template-outlines){target="_blank"}
 
-   a. **Remove sections:**
-      - Hover over the section you want to delete. 
-      - When the **{{< fa trash-can >}}** appears, click on it. 
-      - After you confirm, that section will be removed. 
-
-   a. **Reorder sections:** 
-      - Click **{{< fa ellipsis-vertical >}}{{< fa ellipsis-vertical >}}** and hold firmly to drag to reorder sections.
+   :::
 
 1. When you're done, click **Create New Version** to view a side-by-side comparison of your changes with the previous version:
    - Add a description in **[version notes]{.smallcaps}** to track your changes.
