Docs - Customize document templates: Add text blocks to templates

--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -127,7 +127,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has all these per
 
 4. On the template details page, click **{{< fa pencil >}} Edit Outline**.
 
-5. For the section you'd like to add a guideline to, click **{{< fa plus >}}** and select **{{< fa circle-check >}} Guideline Block** under [content]{.smallcaps}.
+5. For the section you'd like to add a guideline to,[^6] click **{{< fa plus >}}** and select **{{< fa circle-check >}} Guideline Block** under [content]{.smallcaps}.
 
 6. Select the guidelines you'd like to add to that section, then click **{{< fa plus >}} Add # Guideline(s)** to save your changes.
 
@@ -149,6 +149,13 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has all these per
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^5]: [Customize document templates](/guide/templates/customize-document-templates.qmd)
+
+[^6]:
+
+    ::: {.callout}
+    **{{< fa circle-check >}} Guideline Block**s can only be added to sections that do not contain any children.
+
+    :::
 
 
 
