Training: Customizing your model inventory > Add text block to your template

--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -62,12 +62,27 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
 
 6. Click {{< fa square-plus >}} and then select one of the available options:
 
-   a. [new]{.smallcaps}:
-      - **Text Block** — Adds a new section with a blank content block.
-   b. [from library]{.smallcaps}:
-      - **Text Block** — Inserts a text block from a template in your block library.[^6] Select the reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
-      - **Test-Driven**[^7] — Adds a new section with logged test results.
-      - **Metric Over Time**[^8] — Adds a new section with logged metric over time results. 
+   ::: {.panel-tabset}
+
+   #### [new]{.smallcaps}
+
+   Text Block
+   : Adds a new section with a blank content block.
+
+   #### [from library]{.smallcaps}
+   Text Block
+   : Inserts a text block from a template in your block library:[^6]
+   a. Select the reusable blocks you want to add.
+   b. Click **Insert # Text Block(s) to Document**.
+
+   Test-Driven[^7]
+   : Adds a new section with logged test results.
+
+   Metric Over Time[^8]
+   : Adds a new section with logged metric over time results.
+
+   :::
+
 7. After adding the block to your document, click on the text to make changes or add comments.[^9]
 
 ### Add mathematical formulas
