--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -165,22 +165,13 @@ The document template editor validates the YAML changes you make and flags any e
 
 Common issues with YAML include incorrect indenting, imbalanced quotes, or missing colons between keys and values. If you run into issues with incorrect YAML, check the error message provided by the template editor, as it might provide a line and column number where the error occurs.
 
-
 ## Add text blocks to templates
 
 Add shared text blocks from your library[^7] to your templates through both the template outline or the YAML editor.
 
 ### Add text blocks via template outlines
 
-1. While editing a template outline,[^8] click **{{< fa plus >}}** on any section of a template that does not have child sections.
-
-2. Select **{{< fa align-left >}} Text Block**.
-
-3. In the modal that opens, select the resuable blocks you want to add.
-
-4. Click **Insert # Text Block(s) to Document**.
-
-5. Finish editing your template, then save a new version.
+{{< include /guide/templates/_add-text-blocks-via-outlines.qmd >}}
 
 ### Add text blocks via the YAML editor
 
@@ -202,9 +193,9 @@ e. To the right of the [key]{.smallcaps}, click **{{< fa copy >}}** to copy the 
 
 #### 2. Insert block keys into YAML templates
 
-a. With your shared text block's key copied to your clipboard, open up the editor for a YAML template.[^9]
+a. With your shared text block's key copied to your clipboard, open up the editor for a YAML template.[^8]
 
-b. Under a section or subsection's `contents` block sequence,[^10] insert a sequence item of `content_type: text` with your `block_key` nested under `options`.
+b. Under a section or subsection's `contents` block sequence,[^9] insert a sequence item of `content_type: text` with your `block_key` nested under `options`.
 
     For example:
 
@@ -249,9 +240,7 @@ c. Finish editing your template, then save a new version.
 
 [^7]: [Manage text block library](manage-text-block-library.qmd)
 
-[^8]: [Edit template outlines](#edit-template-outlines)
+[^8]: [Edit YAML templates](#edit-yaml-templates)
 
-[^9]: [Edit YAML templates](#edit-yaml-templates)
-
-[^10]: [Template schema](#template-schema)
+[^9]: [Template schema](#template-schema)
 
