--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -509,6 +509,11 @@ Private blocks can be modified by any user role and are unique to that user.
 
 {{< include /guide/templates/_duplicate-text-blocks.qmd >}}
 
+### Add shared blocks to templates
+
+{{< include /guide/templates/_add-text-blocks-via-outlines.qmd >}}
+
+
 :::
 
 :::
@@ -543,6 +548,28 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 2. To the right of the text block you created earlier, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
 3. Make your changes to the details of the block, and select the following **[sharing]{.smallcaps}** option: **Private**
 4. Click **Duplicate Block** to save a private copy of the text block.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/templates" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Add text block to your template**
+:::
+
+1. Select the tab for the type of template you created during this tutorial.
+2. Select the template you created by duplication earlier.
+3. Click **{{< fa pencil >}} Edit Outline**.
+4. Click **{{< fa plus >}}** on any section of your template that does not have child sections.
+5. Select **{{< fa align-left >}} Text Block**.
+6. In the modal that opens, select the shared block you added earlier.
+7. Click **Insert # Text Block(s) to Document**.
+8. Click **Create New Version** to view a side-by-side comparison of your changes with the previous version.
+9. Add a description in **[version notes]{.smallcaps}** to track your changes.
+10. Click **Save** to save the new version.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
