--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -150,12 +150,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has all these per
 
 [^5]: [Customize document templates](/guide/templates/customize-document-templates.qmd)
 
-[^6]:
-
-    ::: {.callout}
-    **{{< fa circle-check >}} Guideline Block**s can only be added to sections that do not contain any children.
-
-    :::
+[^6]: **{{< fa circle-check >}} Guideline Block**s can only be added to sections that do not contain any children.
 
 
 
