docs: Add shared library blocks to template outlines (#1053)
* Docs - Customize document templates: Edit template outlines

* Training: Customizing your model inventory > Customize document templates

* Docs - Customize document templates: Add text blocks to templates

* Training: Customizing your model inventory > Add text block to your template

* Edit

--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -31,12 +31,6 @@ Check the [document template]{.smallcaps} section[^3] in the right sidebar.
 
 {{< include _customize-document-templates.qmd >}}
 
-![Editing a template outline](edit-template-outline.gif){fig-alt="A gif demonstrating editing a template outline" .screenshot width=90%}
-
-::: {.callout}
-To add guidelines to your template, edit the YAML template directly.
-:::
-
 ## Edit YAML templates
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
@@ -165,9 +159,23 @@ a:hover {
 
 :::
 
-### Add text blocks to templates
+### Troubleshooting YAML templates
 
-To add shared text blocks[^7] to your templates via the YAML editor:
+The document template editor validates the YAML changes you make and flags any errors that it finds. If you make a change that the editor cannot parse correctly, the editor will not let you save the changes until you correct the YAML.
+
+Common issues with YAML include incorrect indenting, imbalanced quotes, or missing colons between keys and values. If you run into issues with incorrect YAML, check the error message provided by the template editor, as it might provide a line and column number where the error occurs.
+
+## Add text blocks to templates
+
+Add shared text blocks from your library[^7] to your templates through both the template outline or the YAML editor.
+
+### Add text blocks via template outlines
+
+{{< include /guide/templates/_add-text-blocks-via-outlines.qmd >}}
+
+### Add text blocks via the YAML editor
+
+To add shared text blocks to your templates via the YAML editor:
 
 ::: {.panel-tabset}
 
@@ -215,13 +223,6 @@ b. Under a section or subsection's `contents` block sequence,[^9] insert a seque
 c. Finish editing your template, then save a new version.
 
 :::
-
-## Troubleshooting
-
-The document template editor validates the YAML changes you make and flags any errors that it finds. If you make a change that the editor cannot parse correctly, the editor will not let you save the changes until you correct the YAML.
-
-Common issues with YAML include incorrect indenting, imbalanced quotes, or missing colons between keys and values. If you run into issues with incorrect YAML, check the error message provided by the template editor, as it might provide a line and column number where the error occurs.
-
 
 <!-- FOOTNOTES -->
 
