Rework callout in add or update roles section

--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -17,8 +17,11 @@ aliases:
 
 ## Add or update roles
 
-::: {.callout-important title="Role permissions and role assignments determines a user's level of access."}
-Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the highest level of access and as such, it cannot be cannot be modified.
+::: {.callout-important title="Role permissions and role assignments determine a user's level of access."}
+
+- The [{{< fa hand >}} Customer Admin]{.bubble} role has the highest level of access and, as such, cannot be modified.
+
+- The [{{< fa wrench >}} Basic User]{.bubble} role has the lowest level of access, providing only limited access until an administrator grants further permissions. Since every user must hold this role to sign in, it is not typically shown on the platform.
 :::
 
 {{< include _add-roles.qmd >}}
