Model attachments as context documents

--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -105,7 +105,7 @@ While editing a simple text block, you can insert math equations using the formu
 
 3. Click **[{{< fa check >}}]{.green}** to add the equation to your content block.
 
-### Generate Text with AI <sup>[beta]{.smallcaps}</sup>
+### Generate Text with AI <sup>[beta]{.smallcaps .pink}</sup>
 
 ::: {.callout title="Have you logged your tests?"}
 Generating content drafts for your model documentation works best after you've logged tests and test descriptions for your model's tests with the {{< var validmind.developer >}},[^10] as existing test descriptions provide more context for the large language model (LLM) to draw upon.
