--- a/site/guide/model-inventory/edit-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/edit-model-inventory-fields.qmd
@@ -40,7 +40,8 @@ Edit individual detail fields on a model to ensure that model details are accura
 ### Manage supporting documentation
 
 ::: {.callout title="Uploaded files must be less than 50 MB each in size."}
-To work with attachments on models, first add an attachment inventory field.[^6]
+- To work with attachments on models, first add an attachment inventory field.[^6]
+- Select attachments on models as context documents when generating text blocks with AI within your documents.[^7]
 :::
 
 ::: {.panel-tabset}
@@ -73,3 +74,5 @@ To work with attachments on models, first add an attachment inventory field.[^6]
 [^5]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
 [^6]: [Manage model inventory fields](manage-model-inventory-fields.qmd#inventory-field-types)
+
+[^7]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#generate-text-with-ai-beta)
